k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-demo
  namespace: springboot-demo
spec:
  selector:
    app: springboot-demo
  ports:
    - port: 8080
      targetPort: 8080
